--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,7 +1,34 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Home Page{% endblock %}
+
 {% block body %}
-{{ dump(sticked_nodes) }}
-    {{ dump(promoted_nodes) }}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Figate più cliccate</h3>
+        </div>
+        <div class="panel-body">
+            <ul>
+            {% for node in sticked_nodes %}
+                    <li><a href="{{ path('single_node', { 'slug': node.n_slug }) }}">{{ node.n_title }}</a>
+                        {{ node.d_body|striptags|convert_encoding('UTF-8', 'HTML-ENTITIES')|truncate(200, '...') }}</li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Figate nuove di zecca</h3>
+        </div>
+        <div class="panel-body">
+            <ul>
+                {% for node in promoted_nodes %}
+                    <li><a href="{{ path('single_node', { 'slug': node.n_slug }) }}">{{ node.n_title }}</a>
+                        {{ node.d_body|striptags|convert_encoding('UTF-8', 'HTML-ENTITIES')|truncate(200, '...') }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endblock %}
 
