--- a/app/Resources/views/dictionary/single.node.html.twig
+++ b/app/Resources/views/dictionary/single.node.html.twig
@@ -1,7 +1,28 @@
 {% extends "base.html.twig" %}
 
-{% block title %}AppBundle:Dictionary:single_node{% endblock %}
+{% block title %}{{ node.title }}{% endblock %}
 
 {% block body %}
-<h1>Welcome to the Dictionary:single_node page</h1>
+<h1>{{ node.title }}</h1>
+
+    {% for entity in definitions %}
+                            <div class="panel panel-default">
+                                <div class="panel-heading">di {{entity.u_name}} da {{entity.u_origin}}
+                                </div>
+                                <div class="panel-body">
+                                    <article>
+                                        <header>
+                                            Pubblicato il <time pubdate datetime="{{entity.d_updated|date}}">{{entity.d_updated|date}}</time>
+                                        </header>
+                                        {{entity.d_body|raw}}
+                                        <footer>
+                                            <a href="#{{entity.d_id}}"><span class="glyphicon glyphicon-plus"></span></a>  <a href="#{{entity.d_id}}"><span class="glyphicon glyphicon-minus"></span></a> <span class="poll">{{entity.d_poll}}</span>
+                                        </footer>
+                                    </article>
+                                </div>
+                            </div>
+        {% endfor %}
+
+
+
 {% endblock %}
