--- a/app/Resources/views/node/new.html.twig
+++ b/app/Resources/views/node/new.html.twig
@@ -8,9 +8,9 @@
         <input type="submit" value="Create" />
     {{ form_end(form) }}
 
-    <ul>
+    <ul class="list-inline">
         <li>
-            <a href="{{ path('node_index') }}">Back to the list</a>
+            <a href="{{ path('node_index') }}" class="btn btn-primary">Back to the list</a>
         </li>
     </ul>
 {% endblock %}
