--- a/app/Resources/views/hit/index.html.twig
+++ b/app/Resources/views/hit/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Hits list</h1>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
@@ -25,7 +25,7 @@
                 <td>{{ hit.hitRemoteAddr }}</td>
                 <td>{{ hit.hitUserAgent }}</td>
                 <td>
-                    <ul>
+                    <ul class="list-inline">
                         <li>
                             <a href="{{ path('hit_show', { 'id': hit.id }) }}">show</a>
                         </li>
@@ -39,9 +39,13 @@
         </tbody>
     </table>
 
-    <ul>
+    <div class="navigation">
+        {{ knp_pagination_render(definitions) }}
+    </div>
+
+    <ul class="list-inline">
         <li>
-            <a href="{{ path('hit_new') }}">Create a new hit</a>
+            <a href="{{ path('hit_new') }}" class="btn btn-success">Create a new hit</a>
         </li>
     </ul>
 {% endblock %}
