--- a/app/Resources/views/definition/show.html.twig
+++ b/app/Resources/views/definition/show.html.twig
@@ -22,6 +22,10 @@
                 <td>{{ definition.body }}</td>
             </tr>
             <tr>
+                <th>Extra Info</th>
+                <td>{{ definition.extraInfo }}</td>
+            </tr>
+            <tr>
                 <th>Status</th>
                 <td>{% if definition.status %}Yes{% else %}No{% endif %}</td>
             </tr>
