--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -5,4 +5,9 @@
     <li><a href="mailto:redazione.bruttastoria@gmail.com">Contatta la <strong>Redazione Brutta Storia</strong></a></li>
     <li><a href="http://www.facebook.com/pages/Brutta-Storia-Manuale-di-lingua-e-mitologia-urbana/150473342139"><strong>Brutta Storia</strong> @ <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
 </ul>
+
+<h3>Cerca in Brutta Storia</h3>
+{% form_theme fulltextSearch.getSearchForm 'fulltextsearch_form.html.twig' %}
+{{ form(fulltextSearch.getSearchForm) }}
+
 <a href="https://lorisrighetto.com/abcdiario-di-lingua-e-mitologia-urbana/"><img src="{{ asset('images/abcdiario.jpg') }}" class="img-responsive"></a>
