--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,9 +48,7 @@
 </nav>
 
 <div class="jumbotron">
-    <div class="container">
-            <h1>Manuale di lingua e mitologia urbana</h1>
-    </div>
+    <h1>Manuale di lingua e mitologia urbana</h1>
 </div>
 
 <div class="container">
@@ -60,7 +58,7 @@
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </div>
-    <div class="col-md-3">
+    <div id="sidebar" class="col-md-3">
         {% include 'sidebar.html.twig' %}
     </div>
     </div>
@@ -79,5 +77,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="{{ asset('javascript/assets.js') }}"></script>
 </body>
 </html>
