--- a/web/stylesheets/screen.css
+++ b/web/stylesheets/screen.css
@@ -252,3 +252,18 @@ a.list-group-item-danger.active:hover, a.list-group-item-danger.active:focus {
 #dizionario header a {
   padding: 0 0.2em 0 0;
 }
+
+/* line 38, ../sass/_custom.scss */
+#singolo-lemma__detail article header {
+  font-style: italic;
+  text-align: right;
+  margin-bottom: 30px;
+}
+/* line 43, ../sass/_custom.scss */
+#singolo-lemma__detail article blockquote {
+  margin: 30px 0 0 0;
+}
+/* line 46, ../sass/_custom.scss */
+#singolo-lemma__detail article footer {
+  margin-top: 30px;
+}
