--- a/app/Resources/views/dictionary/single.node.html.twig
+++ b/app/Resources/views/dictionary/single.node.html.twig
@@ -9,7 +9,7 @@
     {% for entity in definitions %}
         <div class="panel panel-default">
             <div class="panel-heading">
-                di {{ entity.u_name }} da {{ entity.u_origin }}
+                di <strong>{{ entity.u_name }}</strong> {% if entity.u_origin %}da <strong>{{ entity.u_origin }}</strong>{% endif %}
             </div>
             <div class="panel-body">
                 <article>
