--- a/app/Resources/views/page/privacy_policy.html.twig
+++ b/app/Resources/views/page/privacy_policy.html.twig
@@ -1,3 +1,13 @@
+{% extends "base.html.twig" %}
+
+{% block title %}Manifesto{% endblock %}
+
+{% block body %}
+    <div  class="jumbotron">
+        <h1>PERCHÈ QUESTO AVVISO</h1>
+        <p>In questa pagina si descrivono le modalità di gestione del sito in riferimento al trattamento dei dati personali degli utenti che lo consultano: Si tratta di un’informativa che è resa anche ai sensi dell’art. 13 del d.lgs. n. 196/2003 – Codice in materia di protezione dei dati personali a coloro che interagiscono con i servizi web di <strong>Loris Righetto</strong>, accessibili per via telematica a partire dall’indirizzo: <a rel="nofollow" target="_blank" href="http://www.bruttastoria.it"><strong>bruttastoria.it</strong></a> corrispondente alla pagina iniziale del sito di Loris Righetto e alla pagina dell'eventuale iscrizione alla newsletter. L’informativa è resa solo per i suddetti siti e non anche per altri siti web eventualmente consultati dall’utente tramite link. L’informativa si ispira anche alla Raccomandazione n. 2/2001 che le autorità europee per la protezione dei dati personali, riunite nel Gruppo istituito dall’art. 29 della direttiva n. 95/46/CE hanno adottato il 17 maggio 2001 per individuare alcuni requisiti minimi per la raccolta di dati personali on-line, e, in particolare, le modalità, i tempi e la natura delle informazioni che i titolari del trattamento devono fornire agli utenti quando questi si collegano a pagine web, indipendentemente dagli scopi del collegamento.</p>
+    </div>
+
 <h2>IL “TITOLARE” DEL TRATTAMENTO</h2>
 <p>A seguito della consultazione di questo sito possono essere trattati dati relativi a persone identificate o identificabili. Il “titolare” del loro trattamento è <strong>Loris Righetto</strong> – <strong>Via Venti Settembre</strong> <strong>Verona</strong> – <strong>37129</strong> - <strong>VR</strong>.</p>
 <h2>LUOGO DI TRATTAMENTO DEI DATI</h2>
@@ -13,4 +23,4 @@
 <p>I dati personali sono trattati con strumenti automatizzati per il tempo strettamente necessario a conseguire gli scopi per cui sono stati raccolti. Specifiche misure di sicurezza sono osservate per prevenire la perdita dei dati, usi illeciti o non corretti ed accessi non autorizzati.</p>
 <h2>DIRITTI DEGLI INTERESSATI</h2>
 <p>I soggetti cui si riferiscono i dati personali hanno il diritto in qualunque momento di ottenere la conferma dell’esistenza o meno dei medesimi dati e di conoscerne il contenuto e l’origine, verificarne l’esattezza o chiederne l’integrazione o l’aggiornamento, oppure la rettificazione (art. 7 del d.lgs. n. 196/2003). Ai sensi del medesimo articolo si ha il diritto di chiedere la cancellazione, la trasformazione in forma anonima o il blocco dei dati trattati in violazione di legge, nonché di opporsi in ogni caso, per motivi legittimi, al loro trattamento. Le richieste vanno rivolte a <strong>Loris Righetto</strong> – <strong>Via Venti Settembre</strong> <strong>Verona</strong> – <strong>37129</strong> - <strong>VR</strong> - <strong>redazione.bruttastoria@gmail.com</strong></p></div>
-<div>
+{% endblock %}
