--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -2,9 +2,9 @@
     <h3>Menu</h3>
     <ul class="nav nav-sidebar">
         <li class="active"><a href="{{ url('default_index', { }, true) }}">Home <strong>Brutta Storia</strong></a></li>
-        <li><a href="{{ url('page_privacypolicy', { }, true) }}">Che cos'è <strong>Brutta Storia</strong>?</a></li>
+        <li><a href="{{ url('page_manifesto') }}">Che cos'è <strong>Brutta Storia</strong>?</a></li>
         <li><a href="mailto:redazione.bruttastoria@gmail.com">Contatta la <strong>Redazione Brutta Storia</strong></a></li>
-        <li><a href="mailto:redazione.bruttastoria@gmail.com">Privacy Policy</a></li>
+        <li><a href="{{ url('page_privacypolicy', { }, true) }}">Privacy Policy</a></li>
         <li><a href="http://www.facebook.com/pages/Brutta-Storia-Manuale-di-lingua-e-mitologia-urbana/150473342139"><strong>Brutta Storia</strong> @ <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></li>
     </ul>
 </aside>
