--- a/app/Resources/views/page/privacy_policy.html.twig
+++ b/app/Resources/views/page/privacy_policy.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Manifesto{% endblock %}
+{% block title %}Privacy e Cookie policy{% endblock %}
 
 {% block body %}
     <div class="well well-lg">
@@ -34,8 +34,8 @@
         caso in cui ció sia a tal fine necessario. I dati personali da Lei forniti sono raccolti con modalita’
         telematiche e trattati, anche con l’ausilio di mezzi elettronici, direttamente e/o tramite terzi delegati
         (societa’ per la postalizzazione, per il data entry…) per le seguenti finalita’: – finalita’ connesse
-        all’accesso alle informazioni sulla comunicazione presenti su <a rel="nofollow" target="_blank"
-                                                                         href="http://www.bruttastoria.it"><strong>bruttastoria.it</strong></a>;
+        all’accesso alle informazioni sulla comunicazione presenti su
+        <a rel="nofollow" target="_blank" href="http://www.bruttastoria.it"><strong>bruttastoria.it</strong></a>;
         In ogni caso i suoi dati non verranno comunicati (se non a società per la postalizzazione e per il data entry) o
         venduti a terzi. All’interno di <strong>Loris Righetto</strong>. i dati potranno essere conosciuti solo da
         soggetti specificatamente incaricati operanti presso gli uffici amministrativi.</p>
@@ -84,5 +84,6 @@
         blocco dei dati trattati in violazione di legge, nonché di opporsi in ogni caso, per motivi legittimi, al loro
         trattamento. Le richieste vanno rivolte a <strong>Loris Righetto</strong> – <strong>Via Venti Settembre</strong>
         <strong>Verona</strong> – <strong>37129</strong> - <strong>VR</strong> - <strong>redazione.bruttastoria@gmail.com</strong>
-    </p></div>
+    </p>
+
 {% endblock %}
