--- a/app/Resources/views/page/privacy_policy.html.twig
+++ b/app/Resources/views/page/privacy_policy.html.twig
@@ -36,9 +36,9 @@
         (societa’ per la postalizzazione, per il data entry…) per le seguenti finalita’: – finalita’ connesse
         all’accesso alle informazioni sulla comunicazione presenti su
         <a rel="nofollow" target="_blank" href="http://www.bruttastoria.it"><strong>bruttastoria.it</strong></a>;
-        In ogni caso i suoi dati non verranno comunicati (se non a società per la postalizzazione e per il data entry) o
-        venduti a terzi. All’interno di <strong>Loris Righetto</strong>. i dati potranno essere conosciuti solo da
-        soggetti specificatamente incaricati operanti presso gli uffici amministrativi.</p>
+        In ogni caso i suoi dati non verranno comunicati o venduti a terzi.
+        All’interno di <strong>Brutta Storia</strong>. i dati potranno essere conosciuti solo da
+        soggetti specificatamente incaricati operanti per conto di <strong>Loris Righetto</strong>.</p>
     <h2>TIPI DI DATI TRATTATI</h2>
     <p><strong>Dati di navigazione</strong></p>
     <p>I sistemi informatici e le procedure software preposte al funzionamento di questo sito web acquisiscono, nel
