--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,9 @@
             <a class="navbar-brand" href="{{ url('default_index', { }, true) }}">Brutta Storia</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-
+            {% if is_granted('ROLE_ADMIN') %}
+                {% include 'admin_menu.html.twig' %}
+            {% endif %}
         </div><!--/.navbar-collapse -->
     </div>
 </nav>
