--- a/app/Resources/views/hit/index.html.twig
+++ b/app/Resources/views/hit/index.html.twig
@@ -40,7 +40,7 @@
     </table>
 
     <div class="navigation">
-        {{ knp_pagination_render(definitions) }}
+        {{ knp_pagination_render(hits) }}
     </div>
 
     <ul class="list-inline">
