--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -75,6 +75,8 @@
 
 </script>
 
+{% block script %}{% endblock %}
+
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
