--- a/app/Resources/views/dictionary/single.node.html.twig
+++ b/app/Resources/views/dictionary/single.node.html.twig
@@ -20,7 +20,7 @@
                     {{ entity.d_body|raw }}
                     {% if entity.d_extraInfo %}
                     <blockquote>
-                        {{ entity.d_extraInfo|raw|nl2br }}
+                        {{ entity.d_extraInfo|raw }}
                     </blockquote>
                     {% endif %}
                     <footer>
