--- a/app/Resources/views/node/show.html.twig
+++ b/app/Resources/views/node/show.html.twig
@@ -31,11 +31,11 @@
             </tr>
             <tr>
                 <th>Updated</th>
-                <td>{% if node.updated %}{{ node.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if node.updated %}{{ node.updated|date('d-m-Y H:i:s') }}{% endif %}</td>
             </tr>
             <tr>
                 <th>Created</th>
-                <td>{% if node.created %}{{ node.created|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if node.created %}{{ node.created|date('d-m-Y H:i:s') }}{% endif %}</td>
             </tr>
         </tbody>
     </table>
