--- a/app/Resources/views/hit/show.html.twig
+++ b/app/Resources/views/hit/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Visittime</th>
-                <td>{% if hit.visitTime %}{{ hit.visitTime|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if hit.visitTime %}{{ hit.visitTime|date('d-m-Y H:i:s') }}{% endif %}</td>
             </tr>
             <tr>
                 <th>Referingurl</th>
